<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/create_new_album"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/albumName"
        android:layout_width="392dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_album"
        android:inputType="text"
        android:textColorHint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:visibility="visible">

        <Button
            android:id="@+id/create"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>
